--- a/robotour/app/src/main/res/values/styles.xml
+++ b/robotour/app/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="searchViewTheme" parent="Widget.AppCompat.Light.SearchView">
+        <item name="android:textColorHint">@color/black</item>
+    </style>
+
+    <style name="overflowMenuColor" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColorSecondary">@color/black</item>
+    </style>
+
 </resources>
