--- a/robotour/app/src/main/res/layout/activity_destination.xml
+++ b/robotour/app/src/main/res/layout/activity_destination.xml
@@ -28,11 +28,24 @@
                 android:focusableInTouchMode="true"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/Destination_txt_filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_centerVertical="true"
+                    android:textColorHighlight="@color/black"
+                    android:text="@string/Destination_txt_filter"
+                    android:textColor="#000000"
+                    android:textSize="16dp" />
+
                 <Spinner
                     android:id="@+id/Destination_spn_filter"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:spinnerMode="dropdown"/>
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/Destination_txt_filter"
+                    android:spinnerMode="dropdown" />
 
             </RelativeLayout>
 
